<resources>
    <string name="app_name">WhatsappClone</string>
    <string name="appbar_scrolling_view_behaviour">appbar_scrolling_view_behaviour</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup"><u>No Account? Go to Signup</u></string>
    <string name="hint_phone">Phone</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="back_to_login">Have already account, Go to login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>