<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/title"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tif_name"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="Name"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tif_phone"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tif_name"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/hint_phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tif_email"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tif_phone"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tif_password"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/tif_email"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/button_signup"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:text="@string/button_sign_up"
                style="@style/StandardButton"
                android:onClick="onSignup"
                android:layout_below="@+id/tif_password"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/grid_3"
                android:layout_marginRight="@dimen/grid_3"
                android:layout_marginStart="@dimen/grid_3"
                android:layout_marginEnd="@dimen/grid_3"
                android:layout_marginTop="@dimen/grid_3"/>
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/grid_3"
                android:layout_marginBottom="@dimen/grid_3"
                android:clickable="true"
                android:onClick="onLogin"
                style="@style/LinkText"
                android:text="@string/back_to_login"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/progessLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/transparent_grey"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>